fixing the logo stretch

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ h1, #toggler, #menu-bar a:last-child{
 }
 #logo-wrapper img {
     width: 70px;
+    height: 70px;
 }
 
 #menu-bar {
@@ -157,7 +158,7 @@ h1, #toggler, #menu-bar a:last-child{
 }
 
 .about-section {
-    background: radial-gradient(var(--background-light), var(--background-dark));
+    background: webkit-radial-gradient(var(--background-light), var(--background-dark));
     color: var(--primary-light);
     display: flex;
     flex-flow: column wrap;
@@ -278,6 +279,7 @@ h1, #toggler, #menu-bar a:last-child{
 }
 #social-wrapper img {
     -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
     filter: grayscale(100%);
     margin-left: 10px;
     width: 25px;
